# chess-engine

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  BUILD.bazel  Bitboard.h  BitboardMoves.cpp  CMakeLists.txt  ChessBoard.cpp  ChessBoard.h  ChessEngine.h  ChessPiece.h  Evaluation.h  IMPROVEMENTS_SUMMARY.md  MODULE.bazel  Makefile  ModernChess.h  MoveContent.h  PieceMoves.h  PieceTables.h  README.md  ValidMoves.cpp  ValidMoves.h  chess_engine  debug_fen  engine_globals.cpp  engine_globals.h  main.cpp  search.h  test_bitboard_moves  test_bitboard_moves.cpp  test_comprehensive  test_comprehensive.cpp  test_crash  test_crash.cpp  test_engine.sh  test_enhanced.cpp  test_features_clean  test_features_clean.cpp  (+11 more)
.cache/clangd/index/: AdvancedSearch.cpp.769C96D50F31AF5C.idx  AdvancedSearch.h.41290BC707FE7EB3.idx  Bitboard.h.AA5C0B77CA21B9A0.idx  BitboardMoves.cpp.1319A8B199DD18CF.idx  BitboardMoves.h.8C517E58F61BE3FC.idx  BitboardOnly.cpp.E79724D2DA5E1E7A.idx  BitboardOnly.h.41AEE35360F0BF55.idx  ChessBoard.cpp.D72D9184FD4FACD6.idx  ChessBoard.h.9AFB55F8C1233786.idx  ChessEngine.h.F727A7F2716D07CC.idx  ChessPiece.h.EC1870A0E91A05C7.idx  EndgameTablebase.cpp.C666E9F0E4E583A8.idx  EndgameTablebase.h.85AE7670FA12276F.idx  Evaluation.cpp.FE09A3E132B49F24.idx  Evaluation.h.D392526D78E0A5B4.idx  EvaluationEnhanced.cpp.2DB930D10B39A9AE.idx  EvaluationEnhanced.h.BC30818336A99197.idx  EvaluationTuning.cpp.45A3801AC16C0F22.idx  EvaluationTuning.h.68AF51CBA0894702.idx  LMREnhanced.cpp.377B99EAB9CFF956.idx  LMREnhanced.h.C3F823ED5CE0EBC5.idx  LazySMP.cpp.FC78241F55E0C118.idx  LazySMP.h.126CB46ED30C81DB.idx  MagicBitboards.cpp.1C9F5CD0C7AB736D.idx  MagicBitboards.h.B72E2452BA1A7944.idx  MoveContent.h.B2E0709EC0CF68D0.idx  NNUE.cpp.8CC56B6118C0193F.idx  NNUE.cpp.CEC0CC6859F93273.idx  NNUE.h.0426A0F2B0A8CD76.idx  NNUE.h.592260A34BE3E677.idx  NNUEOptimized.cpp.CDB5A5FBDB0237FE.idx  NNUEOptimized.cpp.D6C11107A2C68C59.idx  NNUEOptimized.h.9D650785DC3D4677.idx  NNUEOptimized.h.BA5EB94011DC1A47.idx  NeuralNetwork.cpp.6FE0A6ECA5DB02F6.idx  NeuralNetwork.h.1FE5998FA910D825.idx  OpeningBook.cpp.41B528DE80043569.idx  OpeningBook.h.1CF7526B0620D9D5.idx  PatternRecognition.h.ABA965911A58D5E8.idx  PositionAnalysis.cpp.67385E85A489E7ED.idx  (+26 more)
.github/workflows/: ci.yml
benchmarks/: BUILD.bazel  LazySMPBenchmark.cpp  benchmark_args.cpp  benchmark_args.h  benchmark_suite.cpp  benchmark_suite.h  micro_benchmark.cpp  multipv_benchmark.cpp  perft_test.cpp  search_benchmark.cpp  search_probe.cpp
compiler/compiler/: compiler.rs  compiler_function_test.rs  compiler_test.rs  op_code.rs  op_code_test.rs  symbol_table.rs  vm.rs  vm_test.rs
compiler/object/: object.rs
compiler/parser/: lib.rs
config/: dead_code_allowlist.txt  engine_config.json
docs/: ARCHITECTURE.md
examples/: BUILD.bazel  EndgameExample.cpp
scripts/: check-tidy.sh  check.sh  check_clang_format.sh  check_dead_code.sh  compare_bench.py  format-code.sh  probe_match.py  run_clang_tidy.sh  setup_dev.sh  spsa_tune.py
src/: AdvancedSearch.cpp  AdvancedSearch.h  BitboardMoves.h  ChessBoard.cpp  ChessBoard.h  ChessEngine.h  EndgameExample.cpp  EndgameTablebase.cpp  EndgameTablebase.h  Evaluation.cpp  Evaluation.h  EvaluationEnhanced.cpp  EvaluationEnhanced.h  EvaluationTuning.cpp  EvaluationTuning.h  LazySMPBenchmark.cpp  NNUE.cpp  NNUE.h  NNUEOptimized.cpp  NNUEOptimized.h  NeuralNetwork.cpp  NeuralNetwork.h  PerformanceOptimizations.h  README.md  ValidMoves.cpp  ValidMoves.h  engine_globals.cpp  engine_globals.h  main.cpp  search.cpp  search.h  uci.cpp  uci.h
src/ai/: EndgameTablebase.cpp  EndgameTablebase.h  NeuralNetwork.cpp  NeuralNetwork.h  OpeningBook.cpp  OpeningBook.h  SyzygyTablebase.cpp  SyzygyTablebase.h
src/core/: Bitboard.h  BitboardMoves.cpp  BitboardMoves.h  BitboardOnly.cpp  BitboardOnly.h  CastlingConstants.h  ChessBoard.cpp  ChessBoard.h  ChessEngine.h  ChessPiece.h  GameRules.cpp  GameRules.h  MagicBitboards.cpp  MagicBitboards.h  MaterialValues.h  Move.h  MoveContent.h  SquareSentinel.h
src/evaluation/: Evaluation.cpp  Evaluation.h  EvaluationEnhanced.cpp  EvaluationEnhanced.h  EvaluationTuning.cpp  EvaluationTuning.h  GamePhaseConstants.h  HybridEvaluator.cpp  HybridEvaluator.h  NNUE.cpp  NNUE.h  NNUEBitboard.cpp  NNUEBitboard.h  NNUEEvaluation.h  NNUEOptimized.cpp  NNUEOptimized.h  PatternRecognition.h  PositionAnalysis.cpp  PositionAnalysis.h
src/protocol/: uci.cpp  uci.h  uci_main.cpp  uci_output.h
src/search/: AdvancedSearch.cpp  AdvancedSearch.h  BookUtils.cpp  BookUtils.h  EnhancedSearch.cpp  EnhancedSearch.h  LMR.cpp  LMR.h  LMREnhanced.cpp  LMREnhanced.h  LazySMP.cpp  LazySMP.h  MoveOrdering.h  SearchEnhancements.h  SearchImprovements.h  SearchTuning.h  TranspositionTableV2.cpp  TranspositionTableV2.h  ValidMoves.cpp  ValidMoves.h  ValidMoves_generation.cpp  ValidMoves_internal.h  ZobristKeys.h  search.cpp  search.h  search_internal.h  search_move_picker.cpp  search_pvs.cpp  search_root.cpp
src/utils/: ChessFormat.h  Concepts.h  ModernChess.h  PerformanceOptimizations.h  PerftTest.h  PieceMoves.h  Profiler.h  ScopedPThread.h  SearchThread.h  TunableParams.h  engine_globals.cpp  engine_globals.h
tests/: BUILD.bazel  gtest_bitboard_moves.cpp  gtest_book_utils.cpp  gtest_castling.cpp  gtest_comprehensive.cpp  gtest_crash.cpp  gtest_draw_rules.cpp  gtest_en_passant.cpp  gtest_engine_improvements.cpp  gtest_evaluation.cpp  gtest_fen.cpp  gtest_format.cpp  gtest_game_rules.cpp  gtest_killer_moves.cpp  gtest_king_safety.cpp  gtest_legality_regressions.cpp  gtest_nnue.cpp  gtest_parallel.cpp  gtest_pawn.cpp  gtest_perft.cpp  gtest_quiescence.cpp  gtest_search_invariants.cpp  gtest_search_terminal.cpp  gtest_tablebase.cpp  gtest_tactical_suite.cpp  gtest_transposition_table.cpp  gtest_uci.cpp  gtest_wac.cpp  test.cpp  test_bitboard_moves.cpp  test_comprehensive.cpp  test_crash.cpp  test_engine_improvements.cpp  test_enhanced.cpp  test_features_clean.cpp  test_fen.cpp  test_helpers.h  test_improvements.cpp  test_killer_moves.cpp  test_king_safety.cpp  (+5 more)
(+1 files in other folders)
