load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

config_setting(
    name = "cpu_darwin_x86_64",
    values = {"cpu": "darwin_x86_64"},
)

config_setting(
    name = "cpu_k8",
    values = {"cpu": "k8"},
)

config_setting(
    name = "cpu_x64_windows",
    values = {"cpu": "x64_windows"},
)

x86_avx2_copts = select({
    ":cpu_darwin_x86_64": ["-mavx2"],
    ":cpu_k8": ["-mavx2"],
    ":cpu_x64_windows": ["-mavx2"],
    "//conditions:default": [],
})

nnue_optimized_srcs = select({
    ":cpu_darwin_x86_64": ["src/evaluation/NNUEOptimized.cpp"],
    ":cpu_k8": ["src/evaluation/NNUEOptimized.cpp"],
    ":cpu_x64_windows": ["src/evaluation/NNUEOptimized.cpp"],
    "//conditions:default": [],
})

cc_library(
    name = "engine_lib",
    srcs = [
        "src/ai/EndgameTablebase.cpp",
        "src/ai/NeuralNetwork.cpp",
        "src/ai/SyzygyTablebase.cpp",
        "src/core/BitboardMoves.cpp",
        "src/core/BitboardOnly.cpp",
        "src/core/ChessBoard.cpp",
        "src/core/MagicBitboards.cpp",
        "src/evaluation/Evaluation.cpp",
        "src/evaluation/EvaluationEnhanced.cpp",
        "src/evaluation/EvaluationTuning.cpp",
        "src/evaluation/NNUE.cpp",
        "src/evaluation/PositionAnalysis.cpp",
        "src/protocol/uci.cpp",
        "src/search/AdvancedSearch.cpp",
        "src/search/LMREnhanced.cpp",
        "src/search/LazySMP.cpp",
        "src/search/TranspositionTableV2.cpp",
        "src/search/ValidMoves.cpp",
        "src/search/search.cpp",
        "src/utils/engine_globals.cpp",
    ] + nnue_optimized_srcs,
    copts = ["-Werror"] + x86_avx2_copts,
    hdrs = glob(["src/**/*.h"]),
    includes = ["src", "src/core"],
    linkopts = ["-lpthread"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "chess_engine",
    copts = ["-Werror"],
    srcs = ["src/main.cpp"],
    deps = [":engine_lib"],
)
