load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

x86_avx2_copts = select({
    "@bazel_tools//src/conditions:darwin_x86_64": ["-mavx2"],
    "@bazel_tools//src/conditions:linux_x86_64": ["-mavx2"],
    "@bazel_tools//src/conditions:windows_x64": ["-mavx2"],
    "//conditions:default": [],
})

common_copts = ["-Werror", "-std=c++23"]

cc_library(
    name = "engine_lib",
    srcs = [
        "src/ai/EndgameTablebase.cpp",
        "src/ai/NeuralNetwork.cpp",
        "src/ai/SyzygyTablebase.cpp",
        "src/core/BitboardMoves.cpp",
        "src/core/BitboardOnly.cpp",
        "src/core/ChessBoard.cpp",
        "src/core/MagicBitboards.cpp",
        "src/evaluation/Evaluation.cpp",
        "src/evaluation/HybridEvaluator.cpp",
        "src/evaluation/EvaluationTuning.cpp",
        "src/evaluation/NNUE.cpp",
        "src/evaluation/NNUEBitboard.cpp",
        "src/evaluation/PositionAnalysis.cpp",
        "src/protocol/uci.cpp",
        "src/search/AdvancedSearch.cpp",
        "src/search/BookUtils.cpp",
        "src/search/LMR.cpp",
        "src/search/LazySMP.cpp",
        "src/search/TranspositionTableV2.cpp",
        "src/search/ValidMoves.cpp",
        "src/search/search.cpp",
        "src/utils/engine_globals.cpp",
    ],
    copts = common_copts + x86_avx2_copts,
    hdrs = glob(["src/**/*.h"]),
    includes = ["src", "src/core"],
    linkopts = ["-lpthread"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "engine_cli",
    copts = common_copts,
    srcs = ["src/main.cpp"],
    deps = [":engine_lib"],
)

cc_binary(
    name = "engine_uci",
    copts = common_copts,
    srcs = ["src/protocol/uci_main.cpp"],
    deps = [":engine_lib"],
)
