load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

common_benchmark_copts = ["-Werror", "-std=c++26"]

cc_library(
    name = "benchmark_args",
    srcs = ["benchmark_args.cpp"],
    hdrs = ["benchmark_args.h"],
    copts = common_benchmark_copts,
)

cc_library(
    name = "benchmark_suite",
    srcs = ["benchmark_suite.cpp"],
    hdrs = ["benchmark_suite.h"],
    copts = common_benchmark_copts,
    deps = [
        ":benchmark_args",
        "//:engine_lib",
    ],
)

cc_binary(
    name = "search_benchmark",
    srcs = ["search_benchmark.cpp"],
    copts = common_benchmark_copts,
    deps = [
        ":benchmark_suite",
    ],
)

cc_binary(
    name = "micro_benchmark",
    srcs = ["micro_benchmark.cpp"],
    copts = common_benchmark_copts,
    deps = [
        ":benchmark_suite",
    ],
)

cc_binary(
    name = "multipv_benchmark",
    srcs = ["multipv_benchmark.cpp"],
    copts = common_benchmark_copts,
    deps = [
        ":benchmark_suite",
    ],
)

cc_binary(
    name = "lazy_smp_benchmark",
    srcs = ["LazySMPBenchmark.cpp"],
    copts = common_benchmark_copts,
    deps = [
        ":benchmark_suite",
    ],
)

cc_binary(
    name = "perft_benchmark",
    srcs = ["perft_test.cpp"],
    copts = common_benchmark_copts,
    deps = [
        ":benchmark_suite",
    ],
)

cc_binary(
    name = "search_probe",
    srcs = ["search_probe.cpp"],
    copts = common_benchmark_copts,
    deps = [
        ":benchmark_suite",
    ],
)
