load("@rules_cc//cc:defs.bzl", "cc_test")

common_test_copts = [
    "-Werror",
    "-Wno-sign-compare",
    "-Wno-character-conversion",
]

[
    cc_test(
        name = test_name,
        srcs = [test_name + ".cpp"],
        copts = common_test_copts,
        deps = [
            "//:engine_lib",
            "@googletest//:gtest_main",
        ],
    )
    for test_name in [
        "gtest_bitboard_moves",
        "gtest_comprehensive",
        "gtest_crash",
        "gtest_draw_rules",
        "gtest_engine_improvements",
        "gtest_fen",
        "gtest_game_rules",
        "gtest_legality_regressions",
        "gtest_killer_moves",
        "gtest_king_safety",
        "gtest_nnue",
        "gtest_parallel",
        "gtest_pawn",
        "gtest_quiescence",
        "gtest_search_invariants",
        "gtest_search_terminal",
        "gtest_tablebase",
        "gtest_tactical_suite",
        "gtest_uci",
        "gtest_wac",
    ]
]

cc_test(
    name = "gtest_perft",
    srcs = ["gtest_perft.cpp"],
    size = "enormous",
    tags = ["noasan"],
    copts = common_test_copts,
    deps = [
        "//:engine_lib",
        "@googletest//:gtest_main",
    ],
)
